# trusted-setup-management-server

./: Cargo.toml  ceremony.Dockerfile  srs_server.service
attestation_verifier/: CMakeLists.txt  README.md  main.cpp
src/: main.rs
