[package]
name = "srs-srv"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio-util = "0.7.15"
actix-files = "0.6"
parking_lot = "0.12.4"
reqwest = { version = "0.12", default-features = false, features = ["stream", "http2", "json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.31"
sha2 = "0.10"
rand_core = {version = "0.6", features = ["getrandom"]}
rand = "0.9.1"
bincode = "2"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"